[gd_scene load_steps=2 format=3 uid="uid://bjcua3wk706nx"]

[ext_resource type="Script" path="res://menus/level_complete.gd" id="1_d82du"]

[node name="LevelComplete" type="Node2D"]
script = ExtResource("1_d82du")

[node name="Polygon2D" type="Polygon2D" parent="."]
z_index = -5
color = Color(0.192157, 0.227451, 0.317647, 1)
polygon = PackedVector2Array(0, 0, 1152, 0, 1152, 768, 0, 768)

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="Control" type="CenterContainer" parent="CanvasLayer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/Control"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Level completed"
horizontal_alignment = 1

[node name="MarginContainer2" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="Label2" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Level completed"
horizontal_alignment = 1

[node name="MarginContainer3" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 5

[node name="Label3" type="Label" parent="CanvasLayer/Control/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "saved"
horizontal_alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_top = 30

[node name="CenterContainer" type="CenterContainer" parent="CanvasLayer/Control/VBoxContainer"]
layout_mode = 2

[node name="NextLevelButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Next Level"

[node name="MainMenuButton" type="Button" parent="CanvasLayer/Control/VBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
text = "Return To Menu"

[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/CenterContainer/NextLevelButton" to="." method="_on_next_level_button_pressed"]
[connection signal="pressed" from="CanvasLayer/Control/VBoxContainer/CenterContainer/MainMenuButton" to="." method="_on_main_menu_button_pressed"]
